--- a/classroom/first/index.html
+++ b/classroom/first/index.html
@@ -12,41 +12,44 @@
 	<header>
 		<nav>
 			<ul>
-				<li>Your menu</li>
+				<a href="#tags"><li>Tags</li></a>
 			</ul>
 		</nav>
 	</header>
-
-	<section>
-    <h1>HTML5 tags</h1>
-		<article>
-      <h2>Article title</h2>
-      <p>In programming, <strong>Semantics</strong> refers to the meaning of a piece of code — for example "what effect does running that line of JavaScript have?", or "what purpose or role does that HTML element have" (rather than "what does it look like?".)</p>
-      <p>
-        <strong>&lt;div&gt;</strong> is a general purpose element. It has no specific documented responsibility. It simply marks a division or section of the web page but doesn't dictate what can go inside that section.
-      </p>
-      <p>HTML5 includes a set of markup elements that overcome this difficulty. These new elements have meaningful names so that just by looking at these elements you get a clear idea about their content. Some semantic elements of HTML5 are listed below:</p>
-      <img alt="html5-tags" src="https://www.htmlgoodies.com/imagesvr_ce/8525/html5_doc_sections.gif">
-      <div class="tags">        
-        <p><strong>&lt;header&gt;</strong> - Defines a header for a document or a section</p>
-        <p><strong>&lt;nav&gt;</strong> - Defines a container for navigation links</p>
-        <p><strong>&lt;section&gt;</strong> - Defines a section in a document</p>
-        <p><strong>&lt;article&gt;</strong> - Defines an independent self-contained article</p>
-        <p><strong>&lt;aside&gt;</strong> - Defines content aside from the content (like a sidebar)</p>
-        <p><strong>&lt;footer&gt;</strong> - Defines a footer for a document or a section</p>
-        <p><strong>&lt;details&gt;</strong> - Defines additional details</p>
-        <p><strong>&lt;summary&gt;</strong> - Defines a heading for the <strong>&lt;details&gt;</strong> element</p>
-      </div>
-		</article>
-	</section>
-
-	<aside>
-		<h2>About section</h2>
-		<p>Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-	</aside>
+  <main>
+    <section id="#tags">
+      <h1>HTML5 tags</h1>
+      <article>
+        <h2>Article title</h2>
+        <p>In programming, <strong>Semantics</strong> refers to the meaning of a piece of code — for example "what effect does running that line of JavaScript have?", or "what purpose or role does that HTML element have" (rather than "what does it look like?".)</p>
+        <p>
+          <strong>&lt;div&gt;</strong> is a general purpose element. It has no specific documented responsibility. It simply marks a division or section of the web page but doesn't dictate what can go inside that section.
+        </p>
+        <p>HTML5 includes a set of markup elements that overcome this difficulty. These new elements have meaningful names so that just by looking at these elements you get a clear idea about their content. Some semantic elements of HTML5 are listed below:</p>
+        <img alt="html5-tags" src="https://www.htmlgoodies.com/imagesvr_ce/8525/html5_doc_sections.gif">
+        <div class="tags">        
+          <p><strong>&lt;header&gt;</strong> - Defines a header for a document or a section</p>
+          <p><strong>&lt;nav&gt;</strong> - Defines a container for navigation links</p>
+          <p><strong>&lt;section&gt;</strong> - Defines a section in a document</p>
+          <p><strong>&lt;article&gt;</strong> - Defines an independent self-contained article</p>
+          <p><strong>&lt;aside&gt;</strong> - Defines content aside from the content (like a sidebar)</p>
+          <p><strong>&lt;footer&gt;</strong> - Defines a footer for a document or a section</p>
+          <p><strong>&lt;details&gt;</strong> - Defines additional details</p>
+          <p><strong>&lt;summary&gt;</strong> - Defines a heading for the <strong>&lt;details&gt;</strong> element</p>
+        </div>
+      </article>
+    </section>
+  
+    <aside>
+      <h2>About section</h2>
+      <p>Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+    </aside>
+  </main>
 
 	<footer>
-		<p>Copyright 2020</p>
+    <div class="footer-container">
+      <p>Copyright 2020</p>
+    </div>
 	</footer>
 
 </body>
