--- a/classroom/first/index.html
+++ b/classroom/first/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Your Website</title>
+  <title>Classroom</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
