--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Pokemonvirginia</title>
+  <title>Pokemon</title>
 </head>
 
 <body>
