--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="author" content="Virginia Calvo">
+  <meta name="description" content="This is a page about pokemon.">
+
+
   <title>Pokemon</title>
 </head>
 
@@ -9,6 +15,8 @@
   <header>
   </header>
   <h1>Pokedex</h1>
+  
+
   <footer>
   </footer>
 </body>
