--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -8,15 +8,56 @@
   <meta name="description" content="This is a page about pokemon.">
 
   <title>Pokemon</title>
+
 </head>
 
 <body>
+  <!--Comienza header-->
   <header>
+
+    <a href="home.html">Logo</a> <!--Page logo-->
+    <a href="home.html">Home</a> <!--Home-->
+    <a href="#relleno">Relleno</a>
+    <a href="#history">History</a>
+    <a href="#">Videos</a>
+    <a href="#form">Contact</a>
+    <a href="#">Pokedex</a>
+    <a href="#">My favs</a>
+    <hr>
+
+  <!--Fin header-->
   </header>
-  <h1>Pokedex</h1>
   
-  <form> <!--Comienza el formulario-->
+  <!--Hero-->
+  <h1>Pokedex</h1>
+  <a href="#history">History</a>
+  <!--Hero-->
+
+  <!--Texto de relleno-->
+  <h2 id="relleno">Relleno</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
+  <!--Fin texto de relleno-->
+
+  <!--History-->
+  <h2 id="history">History Data</h2>
+  <h3>1980 - First steps</h3>
+  <p>Pokémon is short for “Pocket Monsters", the original Japanese name. The franchise has its roots in a gaming magazine in the early 1980s in Japan—Game Freak, started by Satoshi Tajiri and Ken Sugimori. Tajiri was the writer, while Sugimori was the illustrator.</p>
+  <h3>1996 - Game Boy</h3>
+  <p>26 February 1996 marks the debut of the Pokémon franchise in the form of both those games on the Game Boy in Japan. At its heart, Pocket Monsters: Red and Green was a very basic Japanese role-playing game.</p>
+  <h3>1998 - Pikachu</h3>
+  <p>The popularity of the anime and Yellow, I believe, led to Pikachu becoming the most recognizable and loved Pokémon out there. Pocket Monsters’ success led to North America getting the games in 1998 for the Game Boy (as Pokémon Red and Blue). These few years in the public saw Pokémon go from a game about a hobby to a worldwide phenomenon.</p>
+
+<!--Comienza el formulario-->
+  <form id="form"> 
+
     <fieldset> <!--Opcional para que tenga un recuadro-->
+
       <legend>Contact Us</legend> <!--Opcional para un título para el formulario-->
       
       <!--Campo de Name-->
@@ -50,8 +91,8 @@
 
     </fieldset>
 
-
-  </form><!--Termina el formulario-->
+<!--Termina el formulario-->
+  </form>
 
   <footer>
   </footer>
