--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -14,22 +14,27 @@
 <body>
   <!--Comienza header-->
   <header>
+    <div class="logo">
+      <a href="home.html">
+        <img src="assets/logo.jpg" alt="Logo pokebola" title="home" width="100px">
+      </a> <!--Page logo-->
+    </div>
 
-    <a href="home.html">Logo</a> <!--Page logo-->
-    <a href="home.html">Home</a> <!--Home-->
-    <a href="#relleno">Relleno</a>
-    <a href="#history">History</a>
-    <a href="#">Videos</a>
-    <a href="#form">Contact</a>
-    <a href="#">Pokedex</a>
-    <a href="#">My favs</a>
-    <hr>
-
+    <nav>
+      <a href="home.html">Home</a> <!--Home-->
+      <a href="#relleno">Relleno</a>
+      <a href="#history">History</a>
+      <a href="#">Videos</a>
+      <a href="#form">Contact</a>
+      <a href="#">Pokedex</a>
+      <a href="#">My favs</a>
+      <hr>
+    </nav>
   <!--Fin header-->
   </header>
   
   <!--Hero-->
-  <h1>Pokedex</h1>
+  <h1 id="arriba">Pokedex</h1>
   <a href="#history">History</a>
   <!--Hero-->
 
@@ -93,6 +98,7 @@
 
 <!--Termina el formulario-->
   </form>
+  <a href="#arriba">Go back up </a>
 
   <footer>
   </footer>
