--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -20,14 +20,16 @@
       </a> <!--Page logo-->
     </div>
 
-    <nav>
-      <a href="home.html">Home</a> <!--Home-->
-      <a href="#relleno">Relleno</a>
-      <a href="#history">History</a>
-      <a href="#">Videos</a>
-      <a href="#form">Contact</a>
-      <a href="#">Pokedex</a>
-      <a href="#">My favs</a>
+    <nav> <!--Menu-->
+      <ul>
+        <li><a href="home.html">Home</a></li> 
+        <li><a href="#relleno">Relleno</a></li>
+        <li><a href="#history">History</a></li>
+        <li><a href="#">Videos</a></li>
+        <li><a href="#form">Contact</a></li>
+        <li><a href="#">Pokedex</a></li>
+        <li><a href="#">My favs</a></li>
+      </ul> 
       <hr>
     </nav>
   <!--Fin header-->
