--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -14,13 +14,16 @@
 <body>
   <!--Comienza header-->
   <header>
-    <div class="logo">
+    
+    <!--Page logo-->
+    <div class="logo"> 
       <a href="home.html">
         <img src="assets/logo.jpg" alt="Logo pokebola" title="home" width="100px">
-      </a> <!--Page logo-->
+      </a> 
     </div>
 
-    <nav> <!--Menu-->
+   <!--Menu-->
+    <nav>
       <ul>
         <li><a href="home.html">Home</a></li> 
         <li><a href="#relleno">Relleno</a></li>
@@ -32,6 +35,7 @@
       </ul> 
       <hr>
     </nav>
+
   <!--Fin header-->
   </header>
   
@@ -103,6 +107,13 @@
   <a href="#arriba">Go back up </a>
 
   <footer>
+    <div class="redessociales">
+      <ul>
+        <li><a href="https://es-la.facebook.com/Pokemon/">Facebook</a></li>
+        <li><a href="https://twitter.com/pokemon?lang=es">Twitter</a></li>
+        <li><a href="https://www.instagram.com/pokemon/?hl=es-la">Instagram</a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 
