--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -40,14 +40,16 @@
   </header>
   
   <!--Hero-->
+  <section>
   <h1 id="arriba">Pokedex</h1>
   <a href="#history">History</a>
   <!--Hero-->
+  </section>
 
   <!--Texto de relleno-->
-  <section>
+  <section id="relleno"> 
 
-    <h2 id="relleno">Relleno</h2>
+    <h2 >Relleno</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate autem hic id cum consectetur natus deserunt deleniti laborum eos maiores sequi repellendus, atque minus quia repudiandae similique est. Dolorum!</p>
@@ -60,9 +62,9 @@
   <!--Fin texto de relleno-->
 
   <!--History-->
-  <section>
+  <section id="history">
 
-    <h2 id="history">History Data</h2>
+    <h2 >History Data</h2>
     <h3>1980 - First steps</h3>
     <p>Pokémon is short for “Pocket Monsters", the original Japanese name. The franchise has its roots in a gaming magazine in the early 1980s in Japan—Game Freak, started by Satoshi Tajiri and Ken Sugimori. Tajiri was the writer, while Sugimori was the illustrator.</p>
     <h3>1996 - Game Boy</h3>
@@ -72,10 +74,16 @@
   
   </section>
 
-<!--Comienza el formulario-->
+  <!--Video-->
   <section>
 
-    <form id="form"> 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/D0zYJ1RQ-fs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  </section>
+
+<!--Comienza el formulario-->
+  <section id="form">
+    <form > 
 
       <fieldset> <!--Opcional para que tenga un recuadro-->
 
@@ -111,12 +119,11 @@
         </p>
 
       </fieldset>
-
     <!--Termina el formulario-->
     </form>
 
   </section>
-  
+
   <a href="#arriba">Go back up </a>
 
   <footer>
