--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -9,6 +9,7 @@
 
   <title>Pokemon</title>
 
+  <link rel="stylesheet" href="styles/app.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <li><a href="home.html">Home</a></li> 
         <li><a href="#relleno">Relleno</a></li>
         <li><a href="#history">History</a></li>
-        <li><a href="#">Videos</a></li>
+        <li><a href="#video">Videos</a></li>
         <li><a href="#form">Contact</a></li>
         <li><a href="#">Pokedex</a></li>
         <li><a href="#">My favs</a></li>
@@ -75,7 +76,7 @@
   </section>
 
   <!--Video-->
-  <section>
+  <section id="video">
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/D0zYJ1RQ-fs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
