--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -10,6 +10,7 @@
   <title>Pokemon</title>
 
   <link rel="stylesheet" href="styles/app.css">
+
 </head>
 
 <body>
@@ -66,11 +67,11 @@
   <section id="history">
 
     <h2 >History Data</h2>
-    <h3>1980 - First steps</h3>
+    <h3 class="subtitulo">1980 - First steps</h3>
     <p>Pokémon is short for “Pocket Monsters", the original Japanese name. The franchise has its roots in a gaming magazine in the early 1980s in Japan—Game Freak, started by Satoshi Tajiri and Ken Sugimori. Tajiri was the writer, while Sugimori was the illustrator.</p>
-    <h3>1996 - Game Boy</h3>
+    <h3 class="subtitulo">1996 - Game Boy</h3>
     <p>26 February 1996 marks the debut of the Pokémon franchise in the form of both those games on the Game Boy in Japan. At its heart, Pocket Monsters: Red and Green was a very basic Japanese role-playing game.</p>
-    <h3>1998 - Pikachu</h3>
+    <h3 class="subtitulo">1998 - Pikachu</h3>
     <p>The popularity of the anime and Yellow, I believe, led to Pikachu becoming the most recognizable and loved Pokémon out there. Pocket Monsters’ success led to North America getting the games in 1998 for the Game Boy (as Pokémon Red and Blue). These few years in the public saw Pokémon go from a game about a hobby to a worldwide phenomenon.</p>
   
   </section>
