Change video and history

--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -97,7 +97,7 @@
   </section>
 
   <!--Video-->
-  <section id="video">
+  <section id="video" class="video">
     <div class="container">
       <div class="videos">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/D0zYJ1RQ-fs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
