--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -104,7 +104,7 @@
       </div>
       <div class="youtube">
         <h2>Ckeckout the official pokemon youtube channel</h2>
-        <a href="https://www.youtube.com/channel/UCFctpiB_Hnlk3ejWfHqSm6Q">View more</a>
+        <a href="https://www.youtube.com/channel/UCFctpiB_Hnlk3ejWfHqSm6Q" class="btn-view">View more</a>
       </div>
     </div>
   </section>
