--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -67,9 +67,10 @@
           <div class="year1">
             <h3>1980 </h3>
           </div>
-          <div class="historyp1"></div>
+          <div class="historyp1">
             <h4>First steps</h4>
-            <p> Pokémon is short for “Pocket Monsters", the original Japanese name. The franchise has its roots in a gaming magazine in the early 1980s in Japan—Game Freak, started by Satoshi Tajiri and Ken Sugimori. Tajiri was the writer, while Sugimori was the illustrator.</p>
+           <p> Pokémon is short for “Pocket Monsters", the original Japanese name.<!-- The franchise has its roots in a gaming magazine in the early 1980s in Japan—Game Freak, started by Satoshi Tajiri and Ken Sugimori. Tajiri was the writer, while Sugimori was the illustrator-->.</p> -->
+          </div>
           </div>
 
         <div class="history2">
