--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -64,6 +64,9 @@
         <div class="history1">
 
           <div class="year1">
+             <svg   width="30px" height="30px" viewbox="0 0 30 30" >
+              <image width= "24px" height="24px" xlink:href="assets/pokeball.svg"></image>
+            </svg>
             <h3>1980 </h3>
           </div>
           <div class="historyp1">
@@ -74,6 +77,9 @@
 
         <div class="history2"> 
           <div class="year2">
+            <svg   width="30px" height="30px" viewbox="0 0 30 30" >
+              <image width= "24px" height="24px" xlink:href="assets/joystick.svg"></image>
+            </svg>
             <h3 >1996  </h3>
           </div>
           <div class="historyp2">
@@ -85,6 +91,9 @@
 
         <div class="history3">
           <div class="year3">
+            <svg   width="30px" height="30px" viewbox="0 0 30 30" >
+              <image width= "24px" height="24px" xlink:href="assets/pikachu.svg"></image>
+            </svg>
             <h3 >1998 </h3>
           </div>
           <div class="historyp3">
