Add js scroll and change menu hamburguer

--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -164,5 +164,8 @@
       </div>
     </div>
 </footer>
+
+<script src="src/app.js"></script>
+<script src="src/header.js"></script>
 </body>
 </html>
