--- a/week1-2/home.html
+++ b/week1-2/home.html
@@ -35,7 +35,7 @@
         <li><a href="#history">History</a></li>
         <li><a href="#video">Videos</a></li>
         <li><a href="#form">Contact</a></li>
-        <li><a href="#">Pokedex</a></li>
+        <li><a href="Pokedex.html">Pokedex</a></li>
         <li><a href="#">My favs</a></li>
       </ul> 
     </nav>
