Cuando vuelve el internet

--- a/week1-2/favs.html
+++ b/week1-2/favs.html
@@ -36,7 +36,7 @@
             <li><a href="Pokedex.html">Pokedex</a></li>
             <li><a href="#">My favs</a></li>
           </ul> 
-         </nav>
+        </nav> 
         </div>
       <!--Fin-->
     
@@ -47,6 +47,6 @@
     </section>
     <script src="src/header.js"></script>
     <script src="src/app.js"></script>
-    <script src="src/pokedex.js"></script>
+    <script src="src/favs.js"></script>
 </body>
 </html>
